Mediaquery on mobile has to be fixed

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -969,6 +969,8 @@ section{
     
     .section{
        position: relative;
+       margin-left: auto;
+       margin-right: auto;
     }
     .about{
         padding: 3rem 8rem;
